[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaces/ninepatchtest.png" type="Texture" id=2]
[ext_resource path="res://icons/white_arrow.png" type="Texture" id=3]
[ext_resource path="res://interfaces/store/store_item.gd" type="Script" id=4]
[ext_resource path="res://models/washer/sprite.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "buy"

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ArrowLeft:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -15, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ArrowRight:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 15, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ArrowLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArrowRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="StoreItem" type="Control"]
margin_right = 300.0
margin_bottom = 112.0
rect_min_size = Vector2( 180, 112 )
focus_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 49.3607, 37.6267 ],
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 38.0
margin_right = 263.0
margin_bottom = 100.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 134.0
margin_top = 18.0
margin_right = 263.0
margin_bottom = 65.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="HBoxContainer"]
margin_right = 75.0
margin_bottom = 47.0
rect_min_size = Vector2( 75, 24 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Owned: "

[node name="Label2" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 79.0
margin_right = 129.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 24 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "10"
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 134.0
margin_top = 36.0
margin_right = 242.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 12.0
margin_right = 58.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Price: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer2"]
margin_left = 62.0
margin_top = 12.0
margin_right = 108.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = 11.0
margin_right = 65.0
margin_bottom = 28.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "BUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 128.0
margin_top = 64.0
margin_right = 164.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/buy = SubResource( 2 )
anims/focus = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="ArrowLeft" type="Sprite" parent="."]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
position = Vector2( 20.8536, 45.8891 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )
offset = Vector2( -10, 0 )

[node name="ArrowRight" type="Sprite" parent="."]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
position = Vector2( 279.854, 46.3891 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 3 )
offset = Vector2( 10, 0 )
flip_h = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 84, 45 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 2
vframes = 3
frame = 5

[connection signal="focus_entered" from="." to="." method="_on_StoreItem_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_StoreItem_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_StoreItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_StoreItem_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
